--- a/static/css/hero.css
+++ b/static/css/hero.css
@@ -14,7 +14,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-image: url('../images/deck.webp');
   background-size: cover;
